Fixed: react-scroll-to-bottom not working on mobile

--- a/client/src/components/Chat/Chat.css
+++ b/client/src/components/Chat/Chat.css
@@ -18,22 +18,26 @@
 
 @media (min-width: 320px) and (max-width: 480px) {
     .outerContainer {
-        height: 100%;
+        height: 40%;
+        background: none;
     }
 
     .container {
+        position: absolute;
+        top: 0;
         width: 100%;
-        height: 100%;
+        height: 90%;
     }
 
     form {
-        position: absolute;
+        position: fixed;
         bottom: 0;
         width: 100%;
     }
 }
 
 @media (min-width: 480px) and (max-width: 1200px) {
+
     .container {
         width: 60%;
     }
